--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,9 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
+
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
 
     // Room
     implementation "androidx.room:room-ktx:2.5.2"
