--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-paging:2.5.2"
 
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
